@@ -40,7 +40,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -254,7 +253,7 @@ public class OrderServiceImpl implements OrderService {
         return OrderSummaryListResponseDTO.builder()
                 .orderSummaryResponseDTOList(orders.stream()
                         .map(orderMapper::mapOrderToOrderSummaryResponseDTO)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
 
     }
